# RenderEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
config/: window.json
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Context.cpp  Context.h  EngineGetter.cpp  EngineGetter.h  GameEngine.cpp  GameEngine.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerGetter.cpp  LoggerGetter.h
src/scene/: CMakeLists.txt  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/time/: CMakeLists.txt  Clock.h
src/ui/: CMakeLists.txt  DropdownValue.cpp  DropdownValue.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h
tools/: Get-Sources.ps1
